<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>voris_log</name>
  <version>0.0.1</version>
  <description>A package to log infos from topics</description>
  <maintainer email="daniel_regner@hotmail.com">Daniel Regner</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>


  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_srvs</build_depend>

  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>



  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
